--- a/index.src.html
+++ b/index.src.html
@@ -323,6 +323,7 @@ Algorithms {#audiodecoder-algorithms}
     3. Signal {{AudioDecoder/[[codec implementation]]}} to cease producing
         output for the previous configuration.
     4. <a>Reset the control message queue</a>.
+    5. Set {{AudioDecoder/decodeQueueSize}} to zero.
   </dd>
   <dt><dfn>Close AudioDecoder</dfn> (with error)</dt>
   <dd>
@@ -528,6 +529,7 @@ Algorithms {#videodecoder-algorithms}
     3. Signal {{VideoDecoder/[[codec implementation]]}} to cease producing
         output for the previous configuration.
     4. <a>Reset the control message queue</a>.
+    5. Set {{VideoDecoder/decodeQueueSize}} to zero.
   </dd>
   <dt><dfn>Close VideoDecoder</dfn> (with error)</dt>
   <dd>
@@ -731,6 +733,7 @@ Algorithms {#audioencoder-algorithms}
     3. Signal {{AudioEncoder/[[codec implementation]]}} to cease producing
         output for the previous configuration.
     4. <a>Reset the control message queue</a>.
+    5. Set {{AudioEncoder/encodeQueueSize}} to zero.
   </dd>
   <dt><dfn>Close AudioEncoder</dfn></dt>
   <dd>
@@ -945,6 +948,7 @@ Algorithms {#videoencoder-algorithms}
         <a>system resources</a>.
     4. If |error| is set, queue a task on the media element task source to
         invoke the {{VideoEncoder/[[error callback]]}} with |error|.
+    5. Set {{VideoEncoder/encodeQueueSize}} to zero.
   </dd>
 </dl>
 
