update encodeQueueSize to match decodeQueueSize

--- a/index.src.html
+++ b/index.src.html
@@ -612,8 +612,8 @@ Attributes {#audioencoder-attributes}
     <dfn attribute for=AudioEncoder>encodeQueueSize</dfn>
   </dt>
   <dd>
-    The number of pending encode requests. This does not include requests that
-    have been sent to the underlying codec.
+    The number of pending encode requests. This number will decrease as the
+    underlying codec is ready to accept new input.
   </dd>
 </dl>
 
@@ -816,8 +816,8 @@ Attributes {#videoencoder-attributes}
     <dfn attribute for=VideoEncoder>encodeQueueSize</dfn>
   </dt>
   <dd>
-    The number of pending encode requests. This does not include requests that
-    have been sent to the underlying codec.
+    The number of pending encode requests. This number will decrease as the
+    underlying codec is ready to accept new input.
   </dd>
 </dl>
 
