Close() wording feedback

--- a/index.src.html
+++ b/index.src.html
@@ -301,7 +301,7 @@ Methods {#audiodecoder-methods}
   <dt><dfn method for=AudioDecoder>close()</df></dt>
   <dd>
     Immediately aborts all pending work and releases [=system resources=].
-    Close is permanent.
+    Close is final.
 
     When invoked, run the [=Close AudioDecoder=] algorithm.
   </dd>
@@ -492,7 +492,7 @@ Methods {#videodecoder-methods}
   <dt><dfn method for=VideoDecoder>close()</df></dt>
   <dd>
     Immediately aborts all pending work and releases [=system resources=].
-    Close is permanent.
+    Close is final.
 
     When invoked, run the [=Close VideoDecoder=] algorithm.
   </dd>
@@ -709,7 +709,7 @@ Methods {#audioencoder-methods}
   <dt><dfn method for=AudioEncoder>close()</df></dt>
   <dd>
     Immediately aborts all pending work and releases [=system resources=].
-    Close is permanent.
+    Close is final.
 
     When invoked, run the [=Close AudioEncoder=] algorithm.
   </dd>
@@ -913,7 +913,7 @@ Methods {#videoencoder-methods}
   <dt><dfn method for=VideoEncoder>close()</df></dt>
   <dd>
     Immediately aborts all pending work and releases [=system resources=].
-    Close is permanent.
+    Close is final.
 
     When invoked, run the [=Close VideoEncoder=] algorithm.
   </dd>
