Add Exposed= attribute to EncodedAudioChunk

--- a/index.src.html
+++ b/index.src.html
@@ -1479,6 +1479,7 @@ EncodedAudioChunk Interface {#encodedaudiochunk-interface}
 ------------------------------------------------------------
 <pre class='idl'>
 <xmp>
+[Exposed=(Window,DedicatedWorker)]
 interface EncodedAudioChunk {
   constructor(EncodedAudioChunkInit init);
   readonly attribute EncodedAudioChunkType type;
