Make VideoFrameInit arguments optional
This is required by Web IDL since VideoFrameInit has no required members.

--- a/index.src.html
+++ b/index.src.html
@@ -1654,9 +1654,9 @@ VideoFrame Interface {#videoframe-interface}
 <xmp>
 [Exposed=(Window,DedicatedWorker)]
 interface VideoFrame {
-  constructor(ImageBitmap imageBitmap, VideoFrameInit frameInit);
+  constructor(ImageBitmap imageBitmap, optional VideoFrameInit frameInit = {});
   constructor(PixelFormat pixelFormat, sequence<(Plane or PlaneInit)> planes,
-              VideoFrameInit frameInit);
+              optional VideoFrameInit frameInit = {});
 
   readonly attribute PixelFormat format;
   readonly attribute FrozenArray<Plane> planes;
