Add NOTE about best-effort answer when support changes

--- a/index.src.html
+++ b/index.src.html
@@ -1138,6 +1138,12 @@ Run these steps:
         {{AudioEncoderConfig}}, and {{VideoEncoderConfig}} each define their
         respective configuration entries and defaults.
 
+    NOTE: Support for a given configuration may change dynamically if the
+        hardware is altered (e.g. external GPU unplugged) or if required
+        hardware resources are exhausted. User agents should describe support on
+        a best-effort basis given the resources that are available at the time
+        of the query.
+
 2. Otherwise, return false.
 
 <dfn>Clone Configuration</dfn> (with |config|) {#clone-config}
