--- a/index.src.html
+++ b/index.src.html
@@ -1173,7 +1173,7 @@ run these steps:
 
   <dt><dfn dict-member for=VideoDecoderConfig>acceleration</dfn></dt>
   <dd>
-    Configures hardware accleration for this codec. See
+    Configures hardware acceleration for this codec. See
     {{HardwareAcceleration}}.
   </dd>
 </dl>
@@ -1306,7 +1306,7 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
 
   <dt><dfn dict-member for=VideoEncoderConfig>acceleration</dfn></dt>
   <dd>
-    Configures hardware accleration for this codec. See
+    Configures hardware acceleration for this codec. See
     {{HardwareAcceleration}}.
   </dd>
 </dl>
