Rename acceleration -> hardwareAcceleration

--- a/index.src.html
+++ b/index.src.html
@@ -1091,7 +1091,7 @@ dictionary VideoDecoderConfig {
   unsigned long cropHeight;
   unsigned long displayWidth;
   unsigned long displayHeight;
-  HardwareAcceleration acceleration = "allow";
+  HardwareAcceleration hardwareAcceleration = "allow";
 };
 </xmp>
 </pre>
@@ -1220,7 +1220,7 @@ dictionary VideoEncoderConfig {
   required unsigned long cropHeight;
   unsigned long displayWidth;
   unsigned long displayHeight;
-  HardwareAcceleration acceleration = "allow";
+  HardwareAcceleration hardwareAcceleration = "allow";
 
   AvcEncoderConfig avc;
 };
